--- a/mytypingGameProject/mytypingGameProject.csproj
+++ b/mytypingGameProject/mytypingGameProject.csproj
@@ -64,6 +64,12 @@
     <Compile Include="FormRegister.Designer.cs">
       <DependentUpon>FormRegister.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormScoreboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormScoreboard.Designer.cs">
+      <DependentUpon>FormScoreboard.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -74,6 +80,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormRegister.resx">
       <DependentUpon>FormRegister.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormScoreboard.resx">
+      <DependentUpon>FormScoreboard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
