--- a/mytypingGameProject/mytypingGameProject.csproj
+++ b/mytypingGameProject/mytypingGameProject.csproj
@@ -70,15 +70,7 @@
     <Compile Include="FormScoreboard.Designer.cs">
       <DependentUpon>FormScoreboard.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormStart.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormStart.Designer.cs">
-      <DependentUpon>FormStart.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Program.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -91,9 +83,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormScoreboard.resx">
       <DependentUpon>FormScoreboard.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormStart.resx">
-      <DependentUpon>FormStart.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
